--- a/localisation/italian/phi_l_italian.yml
+++ b/localisation/italian/phi_l_italian.yml
@@ -1065,7 +1065,6 @@ tech_mega_assembly_Mk2_desc:0 "I modelli avanzati di assemblaggio gigante ci con
 edict_greater_than_ourselves_light:0 "Ricollocazione libera"
 edict_greater_than_ourselves_light_desc:1 "Incentiva la ricollocazione volontaria delle popolazioni disoccupate su pianeti adeguati con lavoro e alloggi all'interno del nostro impero."
 tr_domination_colonial_viceroys_desc:0 "I §YRuler§! e i §YGovernatori§! iniziano al livello §Y3§!."
-origin_tooltip_doomsday_effects:2 "§G- ATTENZIONE: Origine facile§!"
 small10players:0 "Piccolo Grande"
 mediumover16: "Medio Grande"
 
@@ -1233,3 +1232,55 @@ focus_physics_desc:0 "Aggiunge 1 posto di lavoro per la fisica nel $district_hab
 focus_engineering:0 "Focus sulla l'ingegneria"
 focus_engineering_name:0 "Focalizzazione dell'ingegneria nel $district_hab_science$"
 focus_engineering_desc:0 "Aggiunge 1 posto di lavoro per l'ingegneria nel $district_hab_science$"
+
+phi_requires_neutral_opinion_or_supremacist:1 "$TRIGGER_FAIL$§RÈ richiesto un'opinione $OPINION_NEUTRAL$ o inferiore di te o di tutti i membri della federazione, oppure un impero deve essere nella posizione $diplo_stance_full_scale_mobilization$ $DIPLOMACY_STANCE$ o essere un §H$COUNTRY_FALLEN_EMPIRE$§!.§!\n"
+phi_requires_good_or_better_opinion:1 "$TRIGGER_FAIL$§RÈ richiesta un'opinione $OPINION_GOOD$.§! da parte tua o di 1 membro della federazione"
+ACTION_FORCE_DECLARE_WAR:0 "Dichiarare guerra forzata"
+ACTION_FORCE_DECLARE_WAR_DESC:0 "Dichiara guerra al nostro 'amico' con malus."
+edict_Force_declare_war: "Forzare la dichiarazione di guerra"
+edict_Force_declare_war_desc: "La guerra si combatte con tutti i mezzi. Dichiarare guerra al nostro 'amico' con malus."
+edict_tooltip_Force_declare_war_effects:0 "§H[Root.GetName]§! desidera dichiarare guerra contro un paese con cui ha relazioni danneggiate \n\n §H[Root.GetName]§! spende 100 influenza, §R100%§! di esaurimento di guerra, +25% di etica militarista attraente, §R100%§! del costo di guerra e §R-25%§! §YPeso diplomatico§! per 10 anni"
+phi_force_war: "Guerra forzata"
+phi_lost_war_ship: "Guerra persa, bonus ricostruzione nave"
+phi_lost_war_building: "Guerra persa, bonus ricostruzione edificio"
+phi_lost_war_pop: "Guerra persa, bonus crescita popolazione"
+phi_fleet_bonus: "Sovvenzione della comunità galattica per la flotta"
+phi_tech_bonus: "Sovvenzione della comunità galattica per la tecnologia"
+phi_economy_bonus: "Sovvenzione della comunità galattica per l'economia"
+galactic_community_upkeep:0 "Costo di mantenimento della §H[galactic_community]§!"
+
+phi_empire_size_over_TITLE:0 "Il tuo impero è troppo grande!"
+phi_empire_size_over_expansion_planer_MESSAGE:0 "Usa la tua £influenza£ per attivare l'editto $edict_expansion_planer$"
+phi_empire_size_over_tip_MESSAGE:0 "Il tuo impero è troppo grande, imposta $diplo_economic_policy$ in $economic_policy_expansion$ o prova a risparmiare £influenza£ per attivare l'editto $economic_policy_adaptability$"
+phi_empire_size_over_MESSAGE:0 "Il tuo impero è troppo grande, ciò ti darà enormi svantaggi.\n
+Prova a creare un vassallo con la decisione sul pianeta o cerca una tecnologia per la capacità amministrativa, la riduzione delle dimensioni dell'impero, ecc..."
+ap_voidborn_void_dweller:0 "$ap_voidborn$"
+ap_voidborn_dweller_habitat_effect:0 "$ap_voidborn_habitat_effect$\n\nTutti gli edifici della base stellare con costi di influenza aggiungono 1 posto di lavoro al pianeta nel sistema nella base del tipo di edificio della base stellare."
+sm_Governmental_manager_asset:0 "Grande sala del manager"
+Research_relic:0 "Laboratorio di artefatti minori"
+materialist_federation_NOT_materialist:0 "$materialist_federation$"
+materialist_federation_DESC:0 "Essere membro di una $materialist_federation$ piacerà al [Root.GetName]."
+
+pacifist_federation_NOT_materialist:0 "$pacifist_federation$"
+pacifist_federation_DESC:0 "Essere membro di una $pacifist_federation$ farà piacere al [Root.GetName]."
+militarist_federation_NOT_militarist:0 "$militarist_federation$"
+militarist_federation_DESC:0 "Essere membro di una $militarist_federation$ farà piacere al [Root.GetName]."
+egalitarian_federation_NOT_egalitarian:0 "$egalitarian_federation$"
+egalitarian_federation_DESC:0 "Essere membro di una $egalitarian_federation$ farà piacere al [Root.GetName]."
+mod_stations_minor_artifacts_produces_mult: "Produzione di manufatti minori sulla stazione"
+Only_CRIMINAL_BRANCH_OFFICE: "Solo una filiale criminale può stabilirsi qui"
+Phi_nemesis_white_peace: "Pace bianca con il nostro nemico giurato"
+wg_phi_nemesi: "Guerra contro il nostro nemico giurato"
+casus_belli_cb_nemesi: "Nemico giurato"
+economic_policy_expansion_name: "Focus sull'espansione"
+economic_policy_adaptability_name: "Focus sull'adattabilità"
+
+phi_planet_buyout_mc: "Acquisizione della filiale"
+phi_planet_buyout_mc_desc: "Acquistare la filiale a prezzo di mercato e chiuderla."
+BRANCH_OFFICE_COOLDOWN:0 "£trigger_no£ §RLe autorità locali hanno recentemente acquisito $BRANCH_OFFICE$ su questo pianeta e non hanno ancora rilasciato licenza per nuove filiali.§!"
+NAME_Only_1_can_exist:0 "Guerra totale contro i nemici giurati" #guerra
+disarmament:0 "Disarmo"
+PayWarWage:0 "Riprazioni di guerra"
+phi_criminal_expropriation:0 "Esproprio del crimine"
+phi_megacorp_competition:0 "Zona di competizione delle Megacorporazioni"
+pacifist: "Pacifista"
