--- a/localisation/korean/phi_l_korean.yml
+++ b/localisation/korean/phi_l_korean.yml
@@ -1056,7 +1056,6 @@ tech_mega_assembly_Mk2_desc:0 "고급 기가 템플릿을 사용하여 새로운
 edict_greater_than_ourselves_light:0 "자유 이주"
 edict_greater_than_ourselves_light_desc:1 "실직한 인구가 제국 내에서 직업과 주거지가 있는 적합한 행성으로 자발적으로 이주하도록 장려합니다."
 tr_domination_colonial_viceroys_desc:0 "§Y지도자§!와 §Y독재자§!는 §Y3§! 레벨에서 시작합니다."
-origin_tooltip_doomsday_effects:2 "§G- 경고: 쉬운 원조§!"
 small10players:0 "작은 큰"
 mediumover16:0 "큰 중간"
 
@@ -1211,7 +1210,7 @@ sm_Governmental_diplomatic_asset:0 "외교 대사관"
  decision_upgrade_habitat_7_desc:0 "$tech_habitat_3_desc$"
 
  humiliated_phi:0 "Humiliate/Demilitarization"
- humiliated_phi _desc:0 "§LWe were publicly humiliated by another Empire with demilitarization.§! effect: \n 
+ humiliated_phi_desc:0 "§LWe were publicly humiliated by another Empire with demilitarization.§! effect: \n 
 $diplo_weight_mult$ §R-0.33§! \n
 $country_alloys_produces_mult$ §R-0.33§! \n
 $country_unity_produces_mult$ §R-0.33§! \n
@@ -1237,3 +1236,55 @@ focus_physics_desc:0 "Add 1 physic job at $district_hab_science$"
 focus_engineering:0 "Focus engineering"
 focus_engineering_name:0 "Focus engineering $district_hab_science$"
 focus_engineering_desc:0 "Add 1 engineering job at $district_hab_science$"
+
+phi_requires_neutral_opinion_or_supremacist:1 "$TRIGGER_FAIL$§RRequires $OPINION_NEUTRAL$ or below of you or all federation member, or one empire must either be in the $diplo_stance_full_scale_mobilization$ $DIPLOMACY_STANCE$ or be a §H$COUNTRY_FALLEN_EMPIRE$§!.§!\n"
+phi_requires_good_or_better_opinion:1 "$TRIGGER_FAIL$§RRequires $OPINION_GOOD$.§! of you or 1 federation member"
+ ACTION_FORCE_DECLARE_WAR:0 "Force Declare War"
+ ACTION_FORCE_DECLARE_WAR_DESC:0 "Declare War at our "friend" on with malus."
+edict_Force_declare_war: "Force declare war"
+edict_Force_declare_war_desc: "War is fought by all means. Declare War at our "friend" on with malus."
+ edict_tooltip_Force_declare_war_effects:0 "§H[Root.GetName]§! wishes to declare war against country with harming relation \n\n §H[Root.GetName]§! Spend 100 influence, §R100%§! war_exhauston, +25% attractive militarist ethic,§R100%§! cost of war and §R-25%§! §YDiplomatic weight§! for 10 years"
+phi_force_war: "Forced war"
+phi_lost_war_ship: "Lost war, bonus rebuild ship"
+phi_lost_war_building: "Lost war, bonus rebuild building"
+phi_lost_war_pop: "Lost war, bonus growthed pop"
+phi_fleet_bonus: "Community Galactic subsidy fleet"
+phi_tech_bonus: "Community Galactic subsidy tech"
+phi_economy_bonus: "Community Galactic subsidy economy"
+galactic_community_upkeep:0 "$galactic_community$ upkeep"
+
+phi_empire_size_over_TITLE:0 "Your empire in over size!"
+phi_empire_size_over_expansion_planer_MESSAGE:0 "Use your £influence£ for activate edict $edict_expansion_planer$"
+phi_empire_size_over_tip_MESSAGE:0 "Your empire is in over size, set $diplo_economic_policy$ in $economic_policy_expansion$ or try save £influence£ for activate edict $economic_policy_adaptability$"
+phi_empire_size_over_MESSAGE:0 "Your empire is in over size, This will give you huge disadvantages.\n
+Try create vassal with decision in planet or search tech for administrative capacity,below empire size etc..."
+ap_voidborn_void_dweller:0 "$ap_voidborn$"
+ap_voidborn_dweller_habitat_effect:0 "$ap_voidborn_habitat_effect$\n\nAll Starbase buildings with cost influence, add 1 work job at planet in system in base at starbase building type"
+sm_Governmental_manager_asset:0 "Manager great hall"
+Research_relic:0 "Minor artifact lab"
+materialist_federation_NOT_materialist:0 "$materialist_federation$"
+materialist_federation_DESC:0 "Being a member of a $materialist_federation$ will please the [Root.GetName]."
+
+pacifist_federation_NOT_materialist:0 "$pacifist_federation$"
+pacifist_federation_DESC:0 "Being a member of a $pacifist_federation$ will please the [Root.GetName]."
+militarist_federation_NOT_militarist:0 "$militarist_federation$"
+militarist_federation_DESC:0 "Being a member of a $militarist_federation$ will please the [Root.GetName]."
+egalitarian_federation_NOT_egalitarian:0 "$egalitarian_federation$"
+egalitarian_federation_DESC:0 "Being a member of a $egalitarian_federation$ will please the [Root.GetName]."
+mod_stations_minor_artifacts_produces_mult: "Minor artifacts Station Output"
+Only_CRIMINAL_BRANCH_OFFICE: "Only criminal branch office can establish there"
+Phi_nemesis_white_peace: "White Peace with our nemesi"
+wg_phi_nemesi: "Nemesi war"
+casus_belli_cb_nemesi: "Nemesi"
+economic_policy_expansion_name: "Expansion Focus"
+economic_policy_adaptability_name: "Adaptability Focus"
+
+phi_planet_buyout_mc: "Buy out branch office"
+phi_planet_buyout_mc_desc: "Buy out at market price this branch office and close it."
+ BRANCH_OFFICE_COOLDOWN:0 "£trigger_no£ §RThe local authorities recently buy out $BRANCH_OFFICE$ on this planet and are still not give license for new branch office.§!"
+ NAME_Only_1_can_exist:0 "Nemesi total war" #war
+disarmament:0 "Disarmament"
+PayWarWage:0 "Pay War Wage"
+phi_criminal_expropriation:0 "Expropriation of Criminal "
+phi_megacorp_competition:0 "Zone of Competion megacorp"
+pacifist: "Pacifist"
