Fix localization per i cloni Corette altre localizzazioni void born ap ai void dweller da +10% starbase capacity invece di 50% Migliorato AI Migliorato building ranger lodge dà 5 unity per blocker invece di 2. Fix action_demand_subjugation che potevi solo chiederlo se l'altro non aveva domination Ora gli imperi IA che erano prima degli umani non mandando richieste di essere sudditi. Tolti gli edifici embassy che erano inutili, messo al loro posto una decisione sulla capitale. Migliorata ancora la AI

--- a/localisation/english/phi_l_english.yml
+++ b/localisation/english/phi_l_english.yml
@@ -947,8 +947,8 @@ vassal_phi_plural: "Subject"
 
 not_allowed_for_vassal:0 "$TRIGGER_FAIL$Not allowed for §Yvassal§! preset."
 
-requires_actor_domination_tradition:0 "$TRIGGER_FAIL$§They haven't §YDomination tradition§! They can't have vassal!§!"
-requires_domination_tradition:0 "$TRIGGER_FAIL$§We haven't §YDomination tradition§! Can't have vassal!§!"
+requires_actor_domination_tradition:0 "$TRIGGER_FAIL$They haven't §YDomination tradition§! They can't have vassal!§!"
+requires_domination_tradition:0 "$TRIGGER_FAIL$We haven't §YDomination tradition§! Can't have vassal!§!"
 
 artifact_buy_collector:0 "Buy by Private speculative seller"
 artifact_buy_collector_desc:0 "Get minor artifacts by private speculative seller."
@@ -1231,3 +1231,11 @@ phi_megacorp_competition:0 "Zone of Competion megacorp"
 pacifist: "Pacifist"
 
 NOT_SAME_VALUE: ""
+decision_phi_embassy: "$building_embassy$"
+decision_phi_embassy_desc: "Add 1 envoys"
+decision_phi_embassy_2: "$building_grand_embassy$"
+decision_phi_embassy_2_desc: "Upgrade embassy and we will add 2 envoys"
+decision_end_decision_phi_embassy_2: "End $decision_phi_embassy$"
+decision_end_decision_phi_embassy: "End $decision_phi_embassy_2$"
+phi_embassy: "$building_embassy$"
+phi_embassy_2: "$building_grand_embassy$"
