--- a/localisation/english/phi_l_english.yml
+++ b/localisation/english/phi_l_english.yml
@@ -452,7 +452,7 @@ economic_policy_discovery: "Discovery Focus"
 economic_policy_discovery_desc: "Let's divert some funds towards applied sciences."
 economic_policy_subterfuge: "Subterfuge Focus"
 economic_policy_subterfuge_desc: "We will study the others in order to understand ourselves."
-tooltip_economic_policy_subterfuge_effects: "Gain 25 £society_research£/month for each foreign empire you are spying on.\n\n§H(homicidal empires get this bonus without needing envoys).§!"
+tooltip_economic_policy_subterfuge_effects: "Gain 25 £society_research£/month for each foreign empire you are spying on or if have 30 §Yintel§! on empire."
 economic_policy_subterfuge_name: "Subterfuge Economic Policy Focus"
 economic_policy_adaptability: "Adaptability Focus"
 economic_policy_adaptability_desc: "We allocate the necessary resources for our leaders to be successful."
@@ -1239,3 +1239,8 @@ decision_end_decision_phi_embassy_2: "End $decision_phi_embassy$"
 decision_end_decision_phi_embassy: "End $decision_phi_embassy_2$"
 phi_embassy: "$building_embassy$"
 phi_embassy_2: "$building_grand_embassy$"
+mod_contact_produces_mult: "Resource from $contact$"
+economic_policy_subterfuge_2: "Subterfuge Focus"
+economic_policy_subterfuge_2_desc: "We will study the others in order to understand ourselves."
+tooltip_economic_policy_subterfuge_effects_2: "Gain 25 £society_research£/month for each foreign empire"
+mod_planet_researchers_phi_engineering_research_produces_add: "£engineering£ $engineering_research$ from £job_engineering_researcher£ [GetResearcherPlural]"
