--- a/localisation/simp_chinese/phi_l_simp_chinese.yml
+++ b/localisation/simp_chinese/phi_l_simp_chinese.yml
@@ -515,7 +515,7 @@ economic_policy_discovery: "Discovery Focus"
 economic_policy_discovery_desc: "Let's divert some funds towards applied sciences."
 economic_policy_subterfuge: "Subterfuge Focus"
 economic_policy_subterfuge_desc: "We will study the others in order to understand ourselves."
-tooltip_economic_policy_subterfuge_effects: "Gain 25 £society_research£/month for each foreign empire you are spying on.\n\n§H(homicidal empires get this bonus without needing envoys).§!"
+tooltip_economic_policy_subterfuge_effects: "Gain 25 £society_research£/month for each foreign empire you are spying on or if have 30 §Yintel§! on empire."
 economic_policy_subterfuge_name: "Subterfuge Economic Policy Focus"
 economic_policy_adaptability: "Adaptability Focus"
 economic_policy_adaptability_desc: "We allocate the necessary resources for our leaders to be successful."
