--- a/localisation/english/phi_l_english.yml
+++ b/localisation/english/phi_l_english.yml
@@ -1,5 +1,8 @@
 ﻿l_english:
 
+#TODO
+sublimation.110.desc: ""
+special: "Special"
 ##################
 ### START MENU ###
 ##################
@@ -1151,11 +1154,7 @@ sm_civilian_shipyard_desc:0 "Produces energy sell ship at pop void dweller for e
  decision_upgrade_habitat_7_desc:0 "$tech_habitat_3_desc$"
 
  humiliated_phi:0 "Humiliate/Demilitarization"
- humiliated_phi_desc:0 "§LWe were publicly humiliated by another Empire with demilitarization.§! effect: \n 
-$diplo_weight_mult$ §R-0.33§! \n
-$country_alloys_produces_mult$ §R-0.33§! \n
-$country_unity_produces_mult$ §R-0.33§! \n
-$country_naval_cap_mult$ §R-0.33§! "
+ humiliated_phi_desc:0 "§LWe were publicly humiliated by another Empire with demilitarization.§! effect \n $diplo_weight_mult$ §R-0.33§!\ncountry build cost ship §R-0.33§!\n$country_unity_produces_mult$ §R-0.33§!\n$country_naval_cap_mult$ §R-0.33§!"
 
 war_goal_wg_phi_war_reparation: "Pay War reparation"
 war_goal_wg_phi_war_reparation_desc: "Ask pay war reparation in energy credits!"
@@ -1197,8 +1196,7 @@ galactic_community_upkeep:0 "$galactic_community$ upkeep"
 phi_empire_size_over_TITLE:0 "Your empire in over size!"
 phi_empire_size_over_expansion_planer_MESSAGE:0 "Use your £influence£ for activate edict $edict_expansion_planer$"
 phi_empire_size_over_tip_MESSAGE:0 "Your empire is in over size, set $diplo_economic_policy$ in $economic_policy_expansion$ or try save £influence£ for activate edict $economic_policy_adaptability$"
-phi_empire_size_over_MESSAGE:0 "Your empire is in over size, This will give you huge disadvantages.\n
-Try create vassal with decision in planet or search tech for administrative capacity,below empire size etc..."
+phi_empire_size_over_MESSAGE:0 "Your empire is in over size, This will give you huge disadvantages.\nTry create vassal with decision in planet or search tech for administrative capacity,below empire size etc..."
 ap_voidborn_void_dweller:0 "$ap_voidborn$"
 ap_voidborn_dweller_habitat_effect:0 "$ap_voidborn_habitat_effect$\n\nAll Starbase buildings with cost influence, add 1 work job at planet in system in base at starbase building type"
 sm_Governmental_manager_asset:0 "Manager great hall"
@@ -1244,3 +1242,7 @@ economic_policy_subterfuge_2: "Subterfuge Focus"
 economic_policy_subterfuge_2_desc: "We will study the others in order to understand ourselves."
 tooltip_economic_policy_subterfuge_effects_2: "Gain 25 £society_research£/month for each foreign empire"
 mod_planet_researchers_phi_engineering_research_produces_add: "£engineering£ $engineering_research$ from £job_engineering_researcher£ [GetResearcherPlural]"
+trade_policy_military:1 "Trade Weapon"
+trade_policy_military_name:0 "$trade_policy_military$"
+trade_conversion_policy_military_name:0 "$trade_policy_military$"
+trade_policy_military_desc:1 "By banding together in a trade militar league, we are able trade with lord of war of other country for get alloys\n\n§EEach collected £trade_value£ §YTrade Value§! earns us £energy£ §Y-0.1§!, £alloys£ §Y0.25§!"
