--- a/localisation/english/phi_l_english.yml
+++ b/localisation/english/phi_l_english.yml
@@ -1242,7 +1242,15 @@ economic_policy_subterfuge_2: "Subterfuge Focus"
 economic_policy_subterfuge_2_desc: "We will study the others in order to understand ourselves."
 tooltip_economic_policy_subterfuge_effects_2: "Gain 25 £society_research£/month for each foreign empire"
 mod_planet_researchers_phi_engineering_research_produces_add: "£engineering£ $engineering_research$ from £job_engineering_researcher£ [GetResearcherPlural]"
+
 trade_policy_military:1 "Trade Weapon"
 trade_policy_military_name:0 "$trade_policy_military$"
 trade_conversion_policy_military_name:0 "$trade_policy_military$"
 trade_policy_military_desc:1 "By banding together in a trade militar league, we are able trade with lord of war of other country for get alloys\n\n§EEach collected £trade_value£ §YTrade Value§! earns us £energy£ §Y-0.1§!, £alloys£ §Y0.25§!"
+job_society_researcher: "society researcher"
+job_society_researcher_desc: "Study genetic and culture of new, old and alien pops"
+mod_job_society_researcher_add:0 "$job_society_researcher$ Jobs"
+mod_job_society_researcher_per_pop:0 "§G+1§! $job_society_researcher$ Job per $VALUE$ Pops"
+mod_job_society_researcher_per_pop_short:0 "\n§G+1§! £mod_job_society_researcher_add£ per $VALUE$ £pop£"
+job_society_researcher_plural:0 "society Researchers"
+job_society_researcher_effect_desc:0 "£job_society_researcher£ $job_society_researcher_plural$ turn §Y$resource of study$§! into £society£ §YResearch Points§! for new technologies"
