--- a/localisation/italian/phi_l_italian.yml
+++ b/localisation/italian/phi_l_italian.yml
@@ -1284,3 +1284,30 @@ PayWarWage:0 "Riprazioni di guerra"
 phi_criminal_expropriation:0 "Esproprio del crimine"
 phi_megacorp_competition:0 "Zona di competizione delle Megacorporazioni"
 pacifist: "Pacifista"
+
+NOT_SAME_VALUE: ""
+decision_phi_embassy: "$building_embassy$"
+decision_phi_embassy_desc: "Add 1 envoys"
+decision_phi_embassy_2: "$building_grand_embassy$"
+decision_phi_embassy_2_desc: "Upgrade embassy and we will add 2 envoys"
+decision_end_decision_phi_embassy_2: "End $decision_phi_embassy$"
+decision_end_decision_phi_embassy: "End $decision_phi_embassy_2$"
+phi_embassy: "$building_embassy$"
+phi_embassy_2: "$building_grand_embassy$"
+mod_contact_produces_mult: "Resource from $contact$"
+economic_policy_subterfuge_2: "Subterfuge Focus"
+economic_policy_subterfuge_2_desc: "We will study the others in order to understand ourselves."
+tooltip_economic_policy_subterfuge_effects_2: "Gain 25 £society_research£/month for each foreign empire"
+mod_planet_researchers_phi_engineering_research_produces_add: "£engineering£ $engineering_research$ from £job_engineering_researcher£ [GetResearcherPlural]"
+
+trade_policy_military:1 "Commercio della guerra"
+trade_policy_military_name:0 "$trade_policy_military$"
+trade_conversion_policy_military_name:0 "$trade_policy_military$"
+trade_policy_military_desc:1 "Unendoci in una lega commerciale di natura militare, siamo in grado di commerciare con signori della guerra di altre nazioni per ottenere leghe\n\n§ECiascun valore di £trade_value£ §Yvalore commerciale§! ci fa guadagnare £energy£ §Y-0.1§! e £leghe£ §Y0.25§!"
+job_society_researcher: "Ricercatore Sociale"
+job_society_researcher_desc: "Studia la genetica e la cultura di popolazioni nuove, antiche ed aliene"
+mod_job_society_researcher_add:0 "Lavori di $job_society_researcher$"
+mod_job_society_researcher_per_pop:0 "§G+1§! Lavoro di $job_society_researcher$ per ogni $VALUE$ popolazione"
+mod_job_society_researcher_per_pop_short:0 "\n§G+1§! £mod_job_society_researcher_add£ per ogni £popolazione£ $VALUE$"
+job_society_researcher_plural:0 "Ricercatori Fisici"
+job_society_researcher_effect_desc:0 "I $job_society_researcher_plural$ £job_society_researcher£ trasformano §Y$risorsa di studio$§! in £society£ §Ypunti di ricerca§! per le nuove tecnologie"
